<resources>
    <string name="app_name">Facalyser</string>
    <string name="facebook_app_id">272727860162162</string>
    <string name="fb_login_protocol_scheme">fb272727860162162</string>
    <string name="title_activity_user_dash">User_dash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_dashboard">UserDashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This app needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="book_my_show">Book My Show</string>
    <string name="amazon_shopping">Amazon Shopping</string>
    <string name="flipkart_shopping">Flipkart Shopping</string>
    <string name="paytm_text">Paytm recharge</string>
    <string name="Instructions">Please ensure the following before recording:\n
    - Enter the TAG Description Correctl\n
    - Take a ten second video of the Object in all perspectives.\n
    - Ensure the video is no longer than ten seconds.</string>
    <string name="privicy_1">
        Your privacy is important to us. This privacy policy is intended to give you confidence in the privacy and security of the personal information we obtain from you whether you are using Giscle Systems, Pvt. Ltd. products such as \"OfferCam\", uploading information to one of Giscle Systems, Pvt. Ltd.\'s websites (“Websites”), such as www.giscle.com, downloading and using our applications, or merely visiting our Websites.\n
We are not responsible for any use of your personal information you provide to third-party applications or websites that may be accessed via OfferCam or Websites. We recommend that you review the privacy policy of any third-party applications or websites that you use.
    </string>
    <string name="privicy_2">When you use OfferCam or the Websites, you may be asked to provide, or the application may provide us with personally identifiable information such as your name, address, date of birth, email address, telephone number, username, frequently traveled destinations, Facebook profiles, friends, and optionally address book connections. Additionally, we will collect a device identifier for the mobile device where you install OfferCam – this enables us to know that you are associated with the OfferCam account and application when you use OfferCam.  Your device identifier will be associated with each video you upload, which includes timestamp data, location data, speed, and other information about the route you drove using OfferCam.\n
By giving us such information, you consent to our using it in the manner described in this policy.</string>
    <string name="privicy_3">
We use personal information to allow us to process your service requests, provide access to privileged areas of the Website, personalize your visit to our Websites, personalize your use of OfferCam, and enable us to improve the products and services we offer. We may occasionally carry out market research and send you details of services and offers that we think may be of interest to you. If you do not wish to receive such information, please email info@giscle.com or alternatively, when we send you an e-mail, it will contain a provision for you to opt out of receiving any further information from us.
    </string>
    <string name="privicy_4">
        We do collect video information from the dashcam videos that you upload to our servers automatically by using the OfferCam application.  By If you do not wish to have images or video collected, please do not use OfferCam. The video and location data we collect may include personally identifiable information such as your home or work address, and you should be mindful about using OfferCam around privacy sensitive areas. We may provide information about you to our employees and agents in order to administer any accounts, products and services provided to you by Giscle Systems, Pvt. Ltd.\n
Typically, we aggregate the data you provide in an anonymous fashion before providing this data to governments, municipalities, car companies, or any other customer of our mapping products.\n
We may also disclose your personally identifiable information when we are required to do so by law, to cooperate with law enforcement, legal proceedings, or other investigations to prevent harm, or in connection with a merger or acquisition of our assets. This may include exchanging information with other companies and organizations for the purposes of fraud protection and credit risk reduction.
    </string>
    <string name="privicy_5">
        Cookies are small data files that a website you visit may save on your computer or handheld device that usually includes an anonymous unique identifier. Our Websites and those of our Products may use cookies for user authentication, keeping tracking of your preferences, promotional campaigns, tracking our audience size and traffic patterns, and in certain other cases. We may include small graphic images in our email messages and newsletters to determine whether the messages were opened and the links were viewed.\n
Third-party advertisers may also create and access cookies, which will be subject to their privacy policies - we accept no responsibility or liability for the use of such third parties\' cookies. If you do not wish cookies to be placed on your PC or handheld device, then they can be disabled in your web browser. The option to do so is normally found in your browser\'s \"security settings\" section. Please note that permanently disabling cookies in your browser may hinder your use of our Websites as well as other websites and interactive service.
    </string>
    <string name="privicy_6">
        All security on our Websites and OfferCam is treated seriously. Where applicable, we undertake security steps, including use of SSL technology, on our back-end systems that store customer account information and to protect data transmissions. However, this is not a guarantee that such data transmissions cannot be accessed, altered or deleted due to firewall or other security software failures.
    </string>
    <string name="privicy_7">
        If you have any further concerns about security, please email our Customer Service team at <u>info@giscle.com</u>
    </string>
    <string name="main_string">These Terms of Service (“Terms”) govern the relationship between you, an individual within the India and its territories and possessions, and Giscle Systems, Pvt. Ltd. (“Giscle Systems”), creator of the driving data mobile application OfferCam (“OfferCam”). By downloading and using OfferCam, you are agreeing to these Terms, which establishes a contractual relationship between you and us. If you do not agree with these Terms, do not access or use the OfferCam or any of our websites. These Terms, together with the Giscle Systems [Privacy policy] which is hereby incorporated by reference, constitute the entire agreement between you and Giscle Systems regarding your use of OfferCam. OfferCam is not intended for use outside the Indian States, and any access to OfferCam from outside the Indian States will not result in points earned and is entirely at your own risk.</string>
    <string name="main_string_bold">
        THESE TERMS LIMIT OUR LIABILITY TO YOU AND INCLUDE AN ARBITRATION PROVISION.  DO NOT USE OFFERCAM IF YOU DO NOT AGREE TO LIMIT OUR LIABILITY OR TO AGREE TO ARBITRATION IN THE EVENT OF A DISPUTE (E.G. NO DISPUTE RESOLUTION IN COURT SUCH AS CLASS ACTION LAWSUITS).
    </string>
    <string name="terms_1">
        Giscle Systems, Pvt. Ltd. may modify these Terms (including the privacy policy) from time to time. We will text you a notification that the Terms have been updated.  All changes to the Terms will be effective 24 hours after we send the text notification unless otherwise noted.  If you do not agree to the updated Terms, do not use OfferCam after the end of the 24-hour period.  Any use of OfferCam after the 24-hour period constitutes an acceptance of the updated terms for all subsequent use of OfferCam.
    </string>
    <string name="terms_2">
        By using OfferCam, you agree and understand that OfferCam records and sends location data as well as visual recordings and personally identifiable data to Giscle Systems.  This data is governed by our privacy policy, which is incorporated into the Terms and part of the agreement you are making with Giscle Systems under these Terms.\n
You are not authorized to use OfferCam in any manner that results in a breach of these Terms.\n
You must be at least 18 years old and with a valid driver’s license and insurance in the jurisdiction where you use OfferCam.\n
You must comply with all applicable laws and regulations when using OfferCam, and you may only use OfferCam for lawful purposes.\n
In the event that you are actively driving, you are not authorized to physically interact with OfferCam in any manner that negatively impacts your driving.  Specifically, do NOT let the use of OfferCam distract you from driving.  OfferCam is intended for use before or after the vehicle is in motion.\n
If you are not in a safe driving condition (e.g. dizzy, nauseated, chemically impaired, sleep deprived, etc.) you are not authorized to use OfferCam.
    </string>
    <string name="terms_3">
        When you install OfferCam on your mobile device, software will be downloaded.  So long as OfferCam is installed on your mobile device, Giscle Systems may automatically check the version of OfferCam that you are running and automatically download new versions of the software to your device.\n
Subject to your compliance with the terms and conditions of these Terms, you have the limited, non-sublicenseable, temporary right to obtain and run a single copy of the software distributed by as solely to access the OfferCam service run by Giscle Systems.  In no event may you sublicense, copy, transfer, modify or make derivative works of the software, nor work around any technical limitations in the software you may encounter.  Giscle Systems may terminate your license to use the software at any point in time in its sole discretion. \n You may not \n(i) remove any copyright, trademark or other proprietary notices from any portion of OfferCam; \n(ii) reproduce, modify, distribute, sell or lease any part of the services provided by OfferCam;\nor (iii) reverse engineer or attempt to extract the source code of any software we provide, unless applicable laws prohibit these restrictions or you have our written permission to do so.
    </string>
</resources>