<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.organization.Giscle.giscle_app.">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:gravity="center|left"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:text="Giscle Systems, Pvt. Ltd"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:gravity="center|left"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:text="Privacy Policy"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="1. General"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3dp"
                        android:padding="8dp"
                        android:text="@string/privicy_1"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="2. Collection of Personal Information"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3dp"
                        android:padding="8dp"
                        android:text="@string/privicy_1"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="3. Use of Personal Information"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3dp"
                        android:padding="8dp"
                        android:text="@string/privicy_3"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="3. Disclosure of Personal Information"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3dp"
                        android:padding="8dp"
                        android:text="@string/privicy_4"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="5. Cookies"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3dp"
                        android:padding="8dp"
                        android:text="@string/privicy_5"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="6. Security"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3dp"
                        android:padding="8dp"
                        android:text="@string/privicy_6"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tv_privicy_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3dp"
                        android:padding="8dp"
                        android:text="@string/privicy_7"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
